--- a/HTML/career.html
+++ b/HTML/career.html
@@ -272,7 +272,7 @@ function showRelatedItems() {
                                                             </a>
                                                             <ul class="submenu submenu-right dropdown-menu">
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/virtual-manpower/virtual-assistant">
+                                                                                    href="">
                                                                                     PANAMA </a></li>
                                                                     <li><a class="dropdown-item" $
                                                                                     href="https://www.airandseaconsultant.com/virtual-manpower/customer-service-support">
