--- a/HTML/career.html
+++ b/HTML/career.html
@@ -275,25 +275,25 @@ function showRelatedItems() {
                                                                                     href="">
                                                                                     PANAMA </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/virtual-manpower/customer-service-support">
+                                                                                    href="">
                                                                                     LIBERIAN </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/virtual-manpower/hire-a-data-entry-executive">
+                                                                                    href="">
                                                                                     COOK ISLAND </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/virtual-manpower/content-creation">
+                                                                                    href="">
                                                                                     HONDURAS </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/virtual-manpower/data-entry-and-analysis">
+                                                                                    href="">
                                                                                     PALAU </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/virtual-manpower/e-commerce-data-support">
+                                                                                    href="">
                                                                                     St.KITTS </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/virtual-manpower/call-center-service">
+                                                                                    href="">
                                                                                     GABON FLAG </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/virtual-manpower/language-translation">
+                                                                                    href="">
                                                                                     DJIBOUTI FLAG </a></li>
                                                             </ul>
 
