--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ocean Whale Virtual</title>
 
-        <link rel="icon" type="image/x-icon" href="../images/logo.jpg">
+        <link rel="icon" type="image/x-icon" href="OCEAN WHALE.jpg">
         <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
         <meta property="og:locale" content="en_US" />
         <meta property="og:type" content="website" />
@@ -28,9 +28,9 @@
         <meta name="description"
                 content="Air & Sea India provides a full range of services that addresses your company’s every need for integrated information. No matter what your platform, or how complex are your
      technology needs, Air & Sea India best-of-breed products from leading Service vendors with full suite of professional and expert’s consultants to help you protect your business investment, reduce costs and grow your business." />
-        <link href="images/logo.jpg" rel="icon" title="Air And Sea Consultant Pvt Ltd"
+        <link href="OCEAN WHALE.jpg" rel="icon" title="Air And Sea Consultant Pvt Ltd"
                 alt="Air And Sea Consultant Pvt Ltd" caption="Air And Sea Consultant Pvt Ltd" />
-        <link href="../images/logo.jpg" rel="apple-touch-icon" title="Air And Sea Consultant Pvt Ltd"
+        <link href="OCEAN WHALE.jpg" rel="apple-touch-icon" title="Air And Sea Consultant Pvt Ltd"
                 alt="Air And Sea Consultant Pvt Ltd" />
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
@@ -65,7 +65,7 @@
                         <div class="container">
                                 <div class="logo">
 
-                                        <img src="images/logo.jpg" alt="as" width="145px">
+                                        <img src="OCEAN WHALE.jpg" alt="as" width="145px">
                                         </a>
                                 </div>
                                 <div class="infobg ">
