--- a/HTML/career.html
+++ b/HTML/career.html
@@ -29,9 +29,9 @@
     <meta name="description"
         content="Air & Sea India provides a full range of services that addresses your company’s every need for integrated information. No matter what your platform, or how complex are your
      technology needs, Air & Sea India best-of-breed products from leading Service vendors with full suite of professional and expert’s consultants to help you protect your business investment, reduce costs and grow your business." />
-    <link href="../images/logo.jpg" rel="icon" title="Ocean Whale Virtual" alt="Ocean Whale Virtual"
+    <link href="OCEAN WHALE.jpg" rel="icon" title="Ocean Whale Virtual" alt="Ocean Whale Virtual"
         caption="Ocean Whale Virtual" />
-    <link href="../images/logo.jpg" rel="apple-touch-icon" title="Ocean Whale Virtual" alt="Ocean Whale Virtual" />
+    <link href="OCEAN WHALE.jpg" rel="apple-touch-icon" title="Ocean Whale Virtual" alt="Ocean Whale Virtual" />
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
@@ -179,7 +179,7 @@ function showRelatedItems() {
             <div class="container">
                 <div class="logo">
                     <a href="#">
-                        <img src="../images/logo.jpg" alt="as" width="145px">
+                        <img src="OCEAN WHALE.jpg" alt="as" width="145px">
                     </a>
                 </div>
                 <div class="infobg ">
@@ -267,7 +267,7 @@ function showRelatedItems() {
                                             <ul
                                                     class="dropdown-menu dropdown-menu-right dropdown-menu-service dropdown-menu-right1">
                                                     <li><a class="dropdown-item hidden-drop-togg"
-                                                                    href="https://www.airandseaconsultant.com/services/virtual-manpower">
+                                                                    href="">
                                                                     ALL FLAG STATE DOCUMENT &raquo
                                                             </a>
                                                             <ul class="submenu submenu-right dropdown-menu">
@@ -301,64 +301,64 @@ function showRelatedItems() {
 
 
                                                     <li><a class="dropdown-item hidden-drop-togg"
-                                                                    href="https://www.airandseaconsultant.com/services/it-outsourcing">
+                                                                    href="">
                                                                     DEVELOPMENT COURSES &raquo
                                                             </a>
                                                             <ul class="submenu submenu-right dropdown-menu">
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/it-outsourcing/remote-staff-augmentation">
+                                                                                    href="">
                                                                                     BTM </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/it-outsourcing/sap-implementation">
+                                                                                    href="">
                                                                                     BRM </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/it-outsourcing/sap-migration-and-support">
+                                                                                    href="">
 
                                                                                     FRAMO </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/it-outsourcing/sap-training-across-modules">
+                                                                                    href="">
                                                                                     ECDIS</a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/it-outsourcing/sap-end-user-support">
+                                                                                    href="">
                                                                                     SOC </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/it-outsourcing/sap-end-user-support">
+                                                                                    href="">
                                                                                     STARING TEST FOR RATING
                                                                             </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/it-outsourcing/sap-end-user-support">
+                                                                                    href="">
                                                                                     MARLINE TEST FOR RATING
                                                                             </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/it-outsourcing/sap-end-user-support">
+                                                                                    href="">
                                                                                     CREW SAFTY COURSE </a>
                                                                     </li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/it-outsourcing/sap-end-user-support">
+                                                                                    href="">
                                                                                     ERM </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/it-outsourcing/sap-end-user-support">
+                                                                                    href="">
                                                                                     ELECTRICAL PRACTISE </a>
                                                                     </li>
                                                             </ul>
 
                                                     </li>
                                                     <li><a class="dropdown-item hidden-drop-togg"
-                                                                    href="https://www.airandseaconsultant.com/services/supply-chain-outsourcing">
+                                                                    href="">
                                                                     COC RENEWAL AND UPGRADATION &raquo
                                                             </a>
                                                             <ul class="submenu submenu-right dropdown-menu">
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/supply-chain-outsourcing/demand-forecasting">
+                                                                                    href="">
                                                                                     PANAMA COC </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/supply-chain-outsourcing/sale-and-operation-planning">
+                                                                                    href="">
                                                                                     LIBERIAN COC </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/supply-chain-outsourcing/sourcing-and-procurement">
+                                                                                    href="">
                                                                                     HONDURAS COC </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/supply-chain-outsourcing/inventory-management">
+                                                                                    href="">
                                                                                     COOK ISLAND COC </a>
                                                                     </li>
 
@@ -366,12 +366,12 @@ function showRelatedItems() {
 
                                                     </li>
                                                     <li><a class="dropdown-item hidden-drop-togg"
-                                                                    href="https://www.airandseaconsultant.com/services/digital-marketing">
+                                                                    href="">
                                                                     FLAG CHANGE &raquo
                                                             </a>
                                                             <ul class="submenu submenu-right dropdown-menu">
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/digital-marketing/search-engine-optimization">
+                                                                                    href="">
                                                                                     VESSEL REGISTRATION </a>
                                                                     </li>
 
@@ -379,37 +379,37 @@ function showRelatedItems() {
 
 
                                                     <li><a class="dropdown-item hidden-drop-togg"
-                                                                    href="https://www.airandseaconsultant.com/services/contract-manufacturing-">
+                                                                    href="">
                                                                     COURSES &raquo
                                                             </a>
                                                             <ul class="submenu submenu-right dropdown-menu">
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/contract-manufacturing-/electronics-and-electrical-equipment-">
+                                                                                    href="">
                                                                                     BST+INDOS+DSD(14 days)
                                                                             </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/contract-manufacturing-/fmcg-indian-origin-products">
+                                                                                    href="">
                                                                                     BST+DSD(14 days) </a>
                                                                     </li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/contract-manufacturing-/cosmetics-and-personal-care-">
+                                                                                    href="">
                                                                                     BST(PSSR+EFA+PST+PST+FPFF)(12
                                                                                     days) </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/contract-manufacturing-/textiles-and-apparel-">
+                                                                                    href="">
                                                                                     STSDSD(2 days) </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/contract-manufacturing-/jaipuri-furniture">
+                                                                                    href="">
                                                                                     INDOS </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/contract-manufacturing-/print-and-packaging">
+                                                                                    href="">
                                                                                     PSF(2.5 days) </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/contract-manufacturing-/artificial-jewelry-">
+                                                                                    href="">
                                                                                     PST RT & FPFF RT(1 day)
                                                                             </a></li>
                                                                     <li><a class="dropdown-item" $
-                                                                                    href="https://www.airandseaconsultant.com/contract-manufacturing-/handcraft-items-">
+                                                                                    href="">
                                                                                     PST RT(1 day) </a></li>
 
                                                             </ul>
@@ -420,7 +420,7 @@ function showRelatedItems() {
 
                                     
                                     <li class="nav-item active dropdown">
-                                            <a class="nav-link" href="HTML/About.html">
+                                            <a class="nav-link" href="">
                                                     &emsp14;<i
                                                             class="fas fa-book-reader menu-icon"></i>
                                                     Courses
