--- a/HTML/gallary.html
+++ b/HTML/gallary.html
@@ -27,10 +27,10 @@
     <meta name="description"
         content="Air & Sea India provides a full range of services that addresses your company’s every need for integrated information. No matter what your platform, or how complex are your
      technology needs, Air & Sea India best-of-breed products from leading Service vendors with full suite of professional and expert’s consultants to help you protect your business investment, reduce costs and grow your business." />
-    <link href="../images/logo.jpg" rel="icon"
+    <link href="OCEAN WHALE.jpg" rel="icon"
         title="Air And Sea Consultant Pvt Ltd" alt="Air And Sea Consultant Pvt Ltd"
         caption="Air And Sea Consultant Pvt Ltd" />
-    <link href="../images/logo.jpg" rel="apple-touch-icon"
+    <link href="OCEAN WHALE.jpg" rel="apple-touch-icon"
         title="Air And Sea Consultant Pvt Ltd" alt="Air And Sea Consultant Pvt Ltd" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
@@ -64,7 +64,7 @@
             <div class="container">
                 <div class="logo">
                     <a href="https://www.airandseaconsultant.com/">
-                        <img src="../images/logo.jpg" alt="as"
+                        <img src="OCEAN WHALE.jpg" alt="as"
                             width="145px">
                     </a>
                 </div>
@@ -145,33 +145,33 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right dropdown-menu-service dropdown-menu-right1">
                                 <li><a class="dropdown-item hidden-drop-togg"
-                                        href="https://www.airandseaconsultant.com/services/virtual-manpower">
+                                        href="">
                                         ALL FLAG STATE DOCUMENT &raquo
                                     </a>
                                     <ul class="submenu submenu-right dropdown-menu">
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/virtual-manpower/virtual-assistant">
+                                                href="">
                                                 PANAMA </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/virtual-manpower/customer-service-support">
+                                                href="">
                                                 LIBERIAN </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/virtual-manpower/hire-a-data-entry-executive">
+                                                href="">
                                                 COOK ISLAND </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/virtual-manpower/content-creation">
+                                                href="">
                                                 HONDURAS </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/virtual-manpower/data-entry-and-analysis">
+                                                href="">
                                                 PALAU </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/virtual-manpower/e-commerce-data-support">
+                                                href="">
                                                 St.KITTS </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/virtual-manpower/call-center-service">
+                                                href="">
                                                 GABON FLAG </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/virtual-manpower/language-translation">
+                                                href="">
                                                 DJIBOUTI FLAG </a></li>
                                     </ul>
 
@@ -179,40 +179,40 @@
 
 
                                 <li><a class="dropdown-item hidden-drop-togg"
-                                        href="https://www.airandseaconsultant.com/services/it-outsourcing">
+                                        href="">
                                         DEVELOPMENT COURSES &raquo
                                     </a>
                                     <ul class="submenu submenu-right dropdown-menu">
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/it-outsourcing/remote-staff-augmentation">
+                                                href="">
                                                 BTM </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/it-outsourcing/sap-implementation">
+                                                href="">
                                                 BRM </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/it-outsourcing/sap-migration-and-support">
+                                                href="">
 
                                                 FRAMO </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/it-outsourcing/sap-training-across-modules">
+                                                href="">
                                                 ECDIS</a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/it-outsourcing/sap-end-user-support">
+                                                href="">
                                                 SOC </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/it-outsourcing/sap-end-user-support">
+                                                href="">
                                                 STARING TEST FOR RATING </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/it-outsourcing/sap-end-user-support">
+                                                href="">
                                                 MARLINE TEST FOR RATING </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/it-outsourcing/sap-end-user-support">
+                                                href="">
                                                 CREW SAFTY COURSE </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/it-outsourcing/sap-end-user-support">
+                                                href="">
                                                 ERM </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/it-outsourcing/sap-end-user-support">
+                                                href="">
                                                 ELECTRICAL PRACTISE </a></li>
                                     </ul>
 
@@ -221,21 +221,21 @@
 
                                 </li>
                                 <li><a class="dropdown-item hidden-drop-togg"
-                                        href="https://www.airandseaconsultant.com/services/supply-chain-outsourcing">
+                                        href="">
                                         COC RENEWAL AND UPGRADATION &raquo
                                     </a>
                                     <ul class="submenu submenu-right dropdown-menu">
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/supply-chain-outsourcing/demand-forecasting">
+                                                href="">
                                                 PANAMA COC </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/supply-chain-outsourcing/sale-and-operation-planning">
+                                                href="">
                                                 LIBERIAN COC </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/supply-chain-outsourcing/sourcing-and-procurement">
+                                                href="">
                                                 HONDURAS COC </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/supply-chain-outsourcing/inventory-management">
+                                                href="">
                                                 COOK ISLAND COC </a></li>
 
                                     </ul>
@@ -247,45 +247,45 @@
 
                                 </li>
                                 <li><a class="dropdown-item hidden-drop-togg"
-                                        href="https://www.airandseaconsultant.com/services/digital-marketing">
+                                        href="">
                                         FLAG CHANGE &raquo
                                     </a>
                                     <ul class="submenu submenu-right dropdown-menu">
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/digital-marketing/search-engine-optimization">
+                                                href="">
                                                 VESSEL REGISTRATION </a></li>
 
                                     </ul>
 
 
                                 <li><a class="dropdown-item hidden-drop-togg"
-                                        href="https://www.airandseaconsultant.com/services/contract-manufacturing-">
+                                        href="">
                                         COURSES &raquo
                                     </a>
                                     <ul class="submenu submenu-right dropdown-menu">
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/contract-manufacturing-/electronics-and-electrical-equipment-">
+                                                href="">
                                                 BST+INDOS+DSD(14 days) </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/contract-manufacturing-/fmcg-indian-origin-products">
+                                                href="">
                                                 BST+DSD(14 days) </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/contract-manufacturing-/cosmetics-and-personal-care-">
+                                                href="">
                                                 BST(PSSR+EFA+PST+PST+FPFF)(12 days) </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/contract-manufacturing-/textiles-and-apparel-">
+                                                href="">
                                                 STSDSD(2 days) </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/contract-manufacturing-/jaipuri-furniture">
+                                                href="">
                                                 INDOS </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/contract-manufacturing-/print-and-packaging">
+                                                href="">
                                                 PSF(2.5 days) </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/contract-manufacturing-/artificial-jewelry-">
+                                                href="">
                                                 PST RT & FPFF RT(1 day) </a></li>
                                         <li><a class="dropdown-item" $
-                                                href="https://www.airandseaconsultant.com/contract-manufacturing-/handcraft-items-">
+                                                href="">
                                                 PST RT(1 day) </a></li>
                                     </ul>
                                 </li>
