--- a/HTML/About.html
+++ b/HTML/About.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ocean Whale Solution</title>
 
-    <link rel="icon" type="image/x-icon" href="OCEAN WHALE.jpg">
+    <link rel="icon" type="image/x-icon" href="../OCEAN WHALE.jpg">
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
@@ -27,7 +27,7 @@
     <meta name="description"
         content="Air & Sea India provides a full range of services that addresses your company’s every need for integrated information. No matter what your platform, or how complex are your
      technology needs, Air & Sea India best-of-breed products from leading Service vendors with full suite of professional and expert’s consultants to help you protect your business investment, reduce costs and grow your business." />
-    <link href="OCEAN WHALE.jpg" rel="icon" title="Air And Sea Consultant Pvt Ltd"
+    <link href="../OCEAN WHALE.jpg" rel="icon" title="Air And Sea Consultant Pvt Ltd"
         alt="Air And Sea Consultant Pvt Ltd" caption="Air And Sea Consultant Pvt Ltd" />
     <link href="https://www.airandseaconsultant.com/assets/image/icon.png" rel="apple-touch-icon"
         title="Air And Sea Consultant Pvt Ltd" alt="Air And Sea Consultant Pvt Ltd" />
@@ -63,7 +63,7 @@
             <div class="container">
                 <div class="logo">
                     <a href="https://www.airandseaconsultant.com/">
-                        <img src="OCEAN WHALE.jpg" alt="as" width="145px">
+                        <img src="../OCEAN WHALE.jpg" alt="as" width="145px">
                     </a>
                 </div>
                 <div class="infobg ">
