--- a/HTML/career.html
+++ b/HTML/career.html
@@ -29,9 +29,9 @@
     <meta name="description"
         content="Air & Sea India provides a full range of services that addresses your company’s every need for integrated information. No matter what your platform, or how complex are your
      technology needs, Air & Sea India best-of-breed products from leading Service vendors with full suite of professional and expert’s consultants to help you protect your business investment, reduce costs and grow your business." />
-    <link href="OCEAN WHALE.jpg" rel="icon" title="Ocean Whale Virtual" alt="Ocean Whale Virtual"
+    <link href="../OCEAN WHALE.jpg" rel="icon" title="Ocean Whale Virtual" alt="Ocean Whale Virtual"
         caption="Ocean Whale Virtual" />
-    <link href="OCEAN WHALE.jpg" rel="apple-touch-icon" title="Ocean Whale Virtual" alt="Ocean Whale Virtual" />
+    <link href="../OCEAN WHALE.jpg" rel="apple-touch-icon" title="Ocean Whale Virtual" alt="Ocean Whale Virtual" />
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
@@ -179,7 +179,7 @@ function showRelatedItems() {
             <div class="container">
                 <div class="logo">
                     <a href="#">
-                        <img src="OCEAN WHALE.jpg" alt="as" width="145px">
+                        <img src="../OCEAN WHALE.jpg" alt="as" width="145px">
                     </a>
                 </div>
                 <div class="infobg ">
