--- a/HTML/contactus.html
+++ b/HTML/contactus.html
@@ -115,7 +115,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">
+                            <a class="nav-link" href="../index.html">
                                 &emsp14;<i class="fa fa-ship menu-icon"></i> Home
                             </a>
                         </li>
