--- a/HTML/About.html
+++ b/HTML/About.html
@@ -348,7 +348,7 @@
 
                                 <div class="col-lg-6 aos-init aos-animate" data-aos="flip-right"
                                     data-aos-duration="1500">
-                                    <img src="../images/ab23.jpg" alt="India" class="img-fluid">
+                                    <img src="../images/ship6.jpeg" alt="India" class="img-fluid">
                                 </div>
                                 <div class="col-lg-12">
                                     <p class="text-justify">
@@ -436,7 +436,7 @@
                     <div class="row">
                         <div class="col-lg-5">
                             <div class="image aos-init" data-aos="zoom-out" data-aos-duration="1000">
-                                <img src="./About_files/why-us.jpeg" class="img-fluid" alt="">
+                                <img src="../images/ship6.jpeg" class="img-fluid" alt="">
                             </div>
                         </div>
                         <div class="col-lg-7 aos-init" data-aos="flip-right" data-aos-duration="1500">
