--- a/HTML/About.html
+++ b/HTML/About.html
@@ -125,7 +125,7 @@
                                 About us
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right">
-                                <li><a class="dropdown-item hidden-drop-togg" href="#about_us">About Us</a></li>
+                                <li><a class="dropdown-item hidden-drop-togg" href="#">About Us</a></li>
                                
                                 <li><a class="dropdown-item hidden-drop-togg" href="#vision">Vision</a>
                                 </li>
